--- a/src/main/resources/lichnui_kobinetu/lk_org/lk2_org.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/lk2_org.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../style/lk.css">
-    <link rel="stylesheet" type="text/css" href="../style/lk2.css">
-    <link rel="stylesheet" type="text/css" href="../style/shared.css">
+    <link rel="stylesheet" type="text/css" href="../../style/lk.css">
+    <link rel="stylesheet" type="text/css" href="../../style/lk2.css">
+    <link rel="stylesheet" type="text/css" href="../../style/shared.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -38,13 +38,19 @@
 
         <form class="table_lk">
 
+            <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a href="#"><p class="lk_mal">Личные данные</p></li>
+                    <li class="breadcrumb-item active" aria-current="page"><p class="org_sobr_big">Организация собраний</p></a></li>
+                    <li class="breadcrumb-item"><a href="#"><p class="chern_zaiav">Черновики заявок</p></a></li>
+                </ol>
+            </nav>
+
             <img class="logout-1-traced"
-                    src="https://static.overlay-tech.com/assets/3373d3e0-dfbb-4718-9044-d75c865a7c23.svg"/>
+                 src="https://static.overlay-tech.com/assets/3373d3e0-dfbb-4718-9044-d75c865a7c23.svg"/>
             <p class="login">Светлана И.</p>
             <div class="poloska"></div>
-            <p class="ld">Личные данные</p>
-<p class="org_sobr">Организация собраний</p>
-            <p class="chern_zaiav">Черновики заявок</p>
+
         </form>
 
 <form class="table_min">
