--- a/src/main/resources/lichnui_kobinetu/lk_org/lk_org.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/lk_org.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../style/lk.css">
-    <link rel="stylesheet" type="text/css" href="../style/shared.css">
+    <link rel="stylesheet" type="text/css" href="../../style/lk.css">
+    <link rel="stylesheet" type="text/css" href="../../style/shared.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -37,13 +37,19 @@
 
         <form class="table_lk">
 
+            <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item active" aria-current="page"><p class="ld">Личные данные</p></li>
+                    <li class="breadcrumb-item"><a href="#"><p class="org_sobr">Организация собраний</p></a></li>
+                    <li class="breadcrumb-item"><a href="#"><p class="chern_zaiav">Черновики заявок</p></a></li>
+                </ol>
+            </nav>
+
             <img class="logout-1-traced"
                     src="https://static.overlay-tech.com/assets/3373d3e0-dfbb-4718-9044-d75c865a7c23.svg"/>
             <p class="login">Светлана И.</p>
             <div class="poloska"></div>
-            <p class="ld">Личные данные</p>
-<p class="org_sobr">Организация собраний</p>
-            <p class="chern_zaiav">Черновики заявок</p>
+
         </form>
 
         <form class="table2">
@@ -159,7 +165,7 @@
     <div class="table">
         <div class="table_item"></div>
     </div>
-    <script src="../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
+    <script src="../../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
