--- a/src/main/resources/help/help_4.html
+++ b/src/main/resources/help/help_4.html
@@ -13,12 +13,12 @@
 <div class="menu">
     <ul>
         <li class="logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
-        <li class="nav_item"><a>Главная</a></li>
+        <li class="nav_item"><a href="../main.html">Главная</a></li>
         <li class="nav_item"><a>Реестр собраний</a></li>
-        <li class="nav_item"><a>Помощь</a></li>
-        <li class="nav_item"><a>Контакты</a></li>
+        <li class="nav_item"><a href="../help/help_1.html">Помощь</a></li>
+        <li class="nav_item"><a href="../help/contacts.html">Контакты</a></li>
         <li class="nav_item"><button class="nav_btn">Войти</button></li>
-        <li class="nav_item"><a href="../signin.html">Зарегистрироваться</a></li>
+        <li class="nav_item"><a>Зарегистрироваться</a></li>
     </ul>
 </div>
 <div class="container">
