--- a/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_1.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_1.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../../style/lk_org_zaiav.css">
-    <link rel="stylesheet" type="text/css" href="../../style/shared.css">
+    <link rel="stylesheet" type="text/css" href="../../../style/lk_org_zaiav.css">
+    <link rel="stylesheet" type="text/css" href="../../../style/shared.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -15,8 +15,8 @@
         <li class="logo"><a href="#"><img src="/img/Logo.svg" /></a></li>
         <li class="nav_item"><a href="/main.html">Главная</a></li>
         <li class="nav_item"><a>Реестр собраний</a></li>
-        <li class="nav_item"><a href="../../help/help_1.html">Помощь</a></li>
-        <li class="nav_item"><a href="../../help/contacts.html">Контакты</a></li>
+        <li class="nav_item"><a href="../../../help/help_1.html">Помощь</a></li>
+        <li class="nav_item"><a href="../../../help/contacts.html">Контакты</a></li>
         <li class="nav_item"><button class="nav_btn">Войти</button></li>
         <li class="nav_item"><a>Зарегистрироваться</a></li>
     </ul>
@@ -28,7 +28,8 @@
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
             <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Главная</a></li>
-            <li class="breadcrumb-item"> Личный кабинет организатора </li>
+            <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Личный кабинет организатора</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Заявка на проведение очного собрания</li>
         </ol>
     </nav>
 </div>
