--- a/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_3.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_3.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../style/shared.css">
-    <link rel="stylesheet" type="text/css" href="../style/z_sobr_uch_4.css">
+    <link rel="stylesheet" type="text/css" href="/style/shared.css">
+    <link rel="stylesheet" type="text/css" href="/style/o_sobr_uch_3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -21,7 +21,6 @@
         <li class="nav_item"><a href="../signin.html">Зарегистрироваться</a></li>
     </ul>
 </div>
-
 <div class="container">
     <div class="content">
 
@@ -29,7 +28,8 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a class="anti_tekst"  href="/main.html">Главная</a></li>
-                    <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Личный кабинет участника</a></li>
+                    <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Личный кабинет организатора</a></li>
+                    <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Организация собраний</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Карточка собрания</li>
                 </ol>
             </nav>
@@ -40,8 +40,8 @@
         <div class="stats">
             <ul>
                 <li class="stats_item"><a>Общая информация</a></li>
-                <li class="stats_item"><a>Повестка дня</a></li>
-                <li class="stats_item"><a><b>Документы</b></a></li>
+                <li class="stats_item"><a><b>Повестка дня</b></a></li>
+                <li class="stats_item"><a>Документы</a></li>
                 <li class="stats_item"><a>Заявки</a></li>
                 <li class="stats_item"><a>Журнал участников</a></li>
                 <li class="stats_item"><a>Бюллетени</a></li>
@@ -49,17 +49,15 @@
         </div>
 
         <div class="ep">
+            <p>Перечень вопросов</p>
             <ul>
-                <li class="hed"><b>Уведомнения</b></li>
-                <li class="text hed"><b>Протокол собрания</b></li>
+                <li>Текст вопроса №1</li>
             </ul>
             <ul>
-                <li class="svg"><img src="../../../img/doc.svg"/><b><u>Журнал уведомлений участников</u></b></li>
-                <li><img src="../../../img/doc.svg"/><b><u>Протокол собрания</u></b></li>
+                <li>Текст вопроса №2</li>
             </ul>
             <ul>
-                <li><button class="down">Скачать журнал</button></li>
-                <li class="btns"><button class="down">Скачать протокол</button></li>
+                <li>Текст вопроса №3</li>
             </ul>
         </div>
 
