--- a/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_6.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_6.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../style/shared.css">
-    <link rel="stylesheet" type="text/css" href="../style/z_sobr_uch_6.css">
+    <link rel="stylesheet" type="text/css" href="/style/shared.css">
+    <link rel="stylesheet" type="text/css" href="/style/z_sobr_uch_6.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -29,7 +29,7 @@
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a class="anti_tekst"  href="/main.html">Главная</a></li>
                     <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Личный кабинет участника</a></li>
-                    <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Участие в собраниях</a></li>
+                    <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Организация собраний</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Карточка собрания</li>
                 </ol>
             </nav>
@@ -105,6 +105,9 @@
                 <th class="bord">20%</th>
             </tr>
         </table>
+
+<button class="knopka4">Редактировать журнал собрания</button>
+        <button class="knopka5">Подписать журнал ЭЦП</button>
 
         <div class="base_bg">
             <div class="base">
