--- a/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_7.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/o_sobr/o_sobr_org_7.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../style/shared.css">
-    <link rel="stylesheet" type="text/css" href="../style/z_sobr_uch_7.css">
+    <link rel="stylesheet" type="text/css" href="/style/shared.css">
+    <link rel="stylesheet" type="text/css" href="/style/z_sobr_uch_7.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -24,8 +24,16 @@
 <div class="container">
     <div class="content">
 
-        <div class="bc"><a href="../main.html">Главная</a>&nbsp;/&nbsp;<a href="">Личный кабинет участника</a>&nbsp;/&nbsp;<a href="">Участие в собраниях</a>&nbsp;/&nbsp;<a href="#">Карточка собрания</a></div>
-
+        <div class="ogl">
+            <nav aria-label="breadcrumb">
+                <ol class="breadcrumb">
+                    <li class="breadcrumb-item"><a class="anti_tekst"  href="/main.html">Главная</a></li>
+                    <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Личный кабинет участника</a></li>
+                    <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Организация собраний</a></li>
+                    <li class="breadcrumb-item active" aria-current="page">Карточка собрания</li>
+                </ol>
+            </nav>
+        </div>
         <p class="heading">Карточка собрания: 1014-очное</p>
 
         <div class="stats">
@@ -107,7 +115,7 @@
         </div>
     </div>
 </div>
-<script src="../jquery/jquery-3.6.0.js"></script>
+<script src="/jquery/jquery-3.6.0.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 <script>
