--- a/src/main/resources/lichnui_kobinetu/lk_org/z_sobr/z_sobr_org_3.html
+++ b/src/main/resources/lichnui_kobinetu/lk_org/z_sobr/z_sobr_org_3.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../style/shared.css">
-    <link rel="stylesheet" type="text/css" href="../style/o_sobr_uch_3.css">
+    <link rel="stylesheet" type="text/css" href="/style/shared.css">
+    <link rel="stylesheet" type="text/css" href="/style/o_sobr_uch_3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -28,8 +28,8 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a class="anti_tekst"  href="/main.html">Главная</a></li>
-                    <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Личный кабинет участника</a></li>
-                    <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Участие в собраниях</a></li>
+                    <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Личный кабинет организатора</a></li>
+                    <li class="breadcrumb-item"><a class="anti_tekst"  href="#">Организация собраний</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Карточка собрания</li>
                 </ol>
             </nav>
