--- a/src/main/resources/reg_organizatorov/reg_org_fl.html
+++ b/src/main/resources/reg_organizatorov/reg_org_fl.html
@@ -121,16 +121,16 @@
 
 
                 <div class="seria">
-            <label for="inputAddress47" class="txt_obsh">Серия*</label>
-            <input type="text" class="forms4" id="inputAddress47" placeholder="00 00">
+            <label for="ser" class="txt_obsh">Серия*</label>
+            <input type="text" class="forms4" id="ser" placeholder="00 00">
         </div>
                 <div class="nomer">
-                    <label for="inputAddress49" class="txt_obsh">Номер*</label>
-                    <input type="text" class="forms4" id="inputAddress49" placeholder="000 000">
+                    <label for="num" class="txt_obsh">Номер*</label>
+                    <input type="text" class="forms4" id="num" placeholder="000 000">
                 </div>
                 <div class="data_vidochi">
-                    <label for="inputAddress09" class="txt_obsh">Дата выдачи*</label>
-                    <input type="text" class="forms4" id="inputAddress09" placeholder="01.01.0000">
+                    <label for="vidacha" class="txt_obsh">Дата выдачи*</label>
+                    <input type="text" class="forms4" id="vidacha" placeholder="01.01.0000">
                 </div>
 
 
@@ -176,13 +176,48 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    </div>
 
 
     <div class="table">
         <div class="table_item"></div>
     </div>
-    <script src="../../../../../11/SK_J/src/main/resources/jquery/jquery-3.6.0.js"></script>
+    <script src="/jquery/jquery-3.6.0.js"></script>
     <script src="/scripts/validate_ul.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#inn").mask("000000000000");
+    });
+
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#phone").mask("+7(000)-000-00-00");
+    });
+
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#ser").mask("00 00");
+    });
+
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#num").mask("000 000");
+    });
+
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#vidacha").mask("00.00.0000");
+    });
+
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#snils").mask("000 000 000 00");
+    });
+</script>
 </body>
 </html>
