--- a/src/main/resources/reg_uchastnikov/reg_ip.html
+++ b/src/main/resources/reg_uchastnikov/reg_ip.html
@@ -75,7 +75,7 @@
 
                     <div class="unn2">
                         <label for="inn" class="txt_obsh">ИНН*</label>
-                        <input type="email" class="forms4" id="inn" placeholder="000000000000">
+                        <input type="text" class="forms4" id="inn" placeholder="000000000000">
                     </div>
 
                     <div class="snils">
@@ -191,6 +191,43 @@
 </div>
 <script src="/jquery/jquery-3.6.0.js"></script>
 <script src="/scripts/validate_ul.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+<script>
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#inn").mask("000000000000");
+    });
+
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#ogrnip").mask("000000000000000");
+    });
+
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#phone").mask("+7(000)-000-00-00");
+    });
+
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#ser").mask("00 00");
+    });
+
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#num").mask("000 000");
+    });
+
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#vidacha").mask("00.00.0000");
+    });
+
+    $(document).ready(function() {
+        $.mask.definitions['0'] = "[0-9]";
+        $("#snils").mask("000 000 000 00");
+    });
+</script>
 </body>
 </html>
