--- a/src/main/resources/lichnui_kobinetu/lk_uch/lk_uch_fl/lk3_uch.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/lk_uch_fl/lk3_uch.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../../style/shared.css">
-    <link rel="stylesheet" type="text/css" href="../../style/lk.css">
-    <link rel="stylesheet" type="text/css" href="../../style/lk3.css">
+    <link rel="stylesheet" type="text/css" href="../../../style/shared.css">
+    <link rel="stylesheet" type="text/css" href="../../../style/lk.css">
+    <link rel="stylesheet" type="text/css" href="../../../style/lk3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -40,8 +40,8 @@
 
             <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="../lk_org/lk_org.html"><p class="lk_mal">Личные данные</p></li>
-                    <li class="breadcrumb-item"><a href="../lk_org/lk2_org.html"><p class="org_sobr">Организация собраний</p></a></li>
+                    <li class="breadcrumb-item"><a href="lk_uch.html"><p class="lk_mal">Личные данные</p></li>
+                    <li class="breadcrumb-item"><a href="lk2_uch.html"><p class="org_sobr">Организация собраний</p></a></li>
                     <li class="breadcrumb-item active" aria-current="page"><p class="chern_zaiav_big">Черновики заявок</p></a></li>
                 </ol>
             </nav>
