--- a/src/main/resources/lichnui_kobinetu/lk_uch/lk_uch_fl/lk_uch.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/lk_uch_fl/lk_uch.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="../../style/lk.css">
-    <link rel="stylesheet" type="text/css" href="../../style/shared.css">
+    <link rel="stylesheet" type="text/css" href="../../../style/lk.css">
+    <link rel="stylesheet" type="text/css" href="../../../style/shared.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Exo+2">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <title>SK_JS</title>
@@ -40,8 +40,8 @@
             <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item active" aria-current="page"><p class="ld">Личные данные</p></li>
-                    <li class="breadcrumb-item"><a href="../lk_org/lk2_org.html"><p class="org_sobr">Организация собраний</p></a></li>
-                    <li class="breadcrumb-item"><a href="../lk_org/lk3_org.html"><p class="chern_zaiav">Черновики заявок</p></a></li>
+                    <li class="breadcrumb-item"><a href="lk2_uch.html"><p class="org_sobr">Организация собраний</p></a></li>
+                    <li class="breadcrumb-item"><a href="lk3_uch.html"><p class="chern_zaiav">Черновики заявок</p></a></li>
                 </ol>
             </nav>
 
@@ -58,69 +58,65 @@
 
             <div class="famil">
                 <label for="fam" class="txt_obsh">Фамилия*</label>
-                <input type="email" class="forms4" id="fam" placeholder="Иванова">
+                <input type="text" class="forms4" id="fam" placeholder="Иванова">
             </div>
             <div class="name">
                 <label for="nam" class="txt_obsh">Имя*</label>
-                <input type="email" class="forms4" id="nam" placeholder="Светлана">
+                <input type="text" class="forms4" id="nam" placeholder="Светлана">
             </div>
             <div class="otch">
                 <label for="otch" class="txt_obsh">Отчество*</label>
-                <input type="email" class="forms4" id="otch" placeholder="Андреевна">
+                <input type="text" class="forms5" id="otch" placeholder="Андреевна">
             </div>
             <div class="pocht_adres">
                 <label for="pocht_adres" class="txt_obsh">Почтовый адрес*</label>
-                <input type="email" class="forms2" id="pocht_adres" placeholder="111116. г. Москва, а/я №87">
+                <input type="text" class="forms2" id="pocht_adres" placeholder="111116. г. Москва, а/я №87">
             </div>
             <div class="unn">
                 <label for="unn" class="txt_obsh">ИНН*</label>
-                <input type="email" class="forms4" id="unn" placeholder="11111111">
+                <input type="text" class="forms" id="unn" placeholder="11111111">
             </div>
             <div class="snils">
                 <label for="snils" class="txt_obsh">СНИЛС*</label>
-                <input type="email" class="forms3" id="snils" placeholder="123 456 789 00">
+                <input type="text" class="forms3" id="snils" placeholder="123 456 789 00">
             </div>
             <div class="telefon">
                 <label for="telefon" class="txt_obsh">Телефон*</label>
-                <input type="email" class="forms4" id="telefon" placeholder="+7 (900) 000-12-34">
+                <input type="text" class="forms" id="telefon" placeholder="+7 (900) 000-12-34">
             </div>
             <div class="email">
                 <label for="email" class="txt_obsh">Электронная почта*</label>
-                <input type="email" class="forms4" id="email" placeholder="ivanova12@mail.ru">
-            </div>
-            <div class="email2">
-                <label for="email2" class="txt_obsh">Повторите адрес электронной почты*</label>
-                <input type="email" class="forms4" id="email2" placeholder="ivanova12@mail.ru">
+                <input type="text" class="forms3" id="email" placeholder="ivanova12@mail.ru">
             </div>
 
             <p class="izm_pas">Изменить пароль</p>
 
             <div class="new_pas">
                 <label for="new_pas" class="txt_obsh">Новый пароль</label>
-                <input type="email" class="forms4" id="new_pas" placeholder="********">
+                <input type="text" class="forms" id="new_pas" placeholder="********">
             </div>
             <div class="new_pas2">
                 <label for="new_pas2" class="txt_obsh">Повторите новый пароль</label>
-                <input type="email" class="forms3" id="new_pas2" placeholder="********">
+                <input type="text" class="forms3" id="new_pas2" placeholder="********">
             </div>
 
             <p class="pass">Паспортные данные</p>
 
             <div class="seria">
                 <label for="seria" class="txt_obsh">Серия*</label>
-                <input type="email" class="forms4" id="seria" placeholder="00 00">
+                <input type="text" class="forms4" id="seria" placeholder="00 00">
             </div>
             <div class="nomer">
                 <label for="nomer" class="txt_obsh">Номер*</label>
-                <input type="email" class="forms4" id="nomer" placeholder="000 000">
+                <input type="text" class="forms4" id="nomer" placeholder="000 000">
             </div>
             <div class="data">
                 <label for="data" class="txt_obsh">Дата выдачи*</label>
-                <input type="email" class="forms4" id="data" placeholder="01.01.0000">
+                <input type="text" class="forms5" id="data" placeholder="01.01.0000">
             </div>
             <div class="kem_vidan">
                 <label for="kem_vidan" class="txt_obsh">Кем выдан*</label>
-                <input type="email" class="forms2" id="kem_vidan" placeholder="Кем выдан">
+                <input type="text" class="forms2" id="kem_vidan" placeholder="Кем выдан">
             </div>
 
             <p class="doks">Документы</p>
@@ -135,12 +131,8 @@
             <button type="button" class="knopka">Сохранить и подписать изменения ЭП</button>
 
 
-
-
-
-
         </form>
-
+    </div>
 
         <div class="container">
                 <div class="content">
