--- a/src/main/resources/lichnui_kobinetu/lk_uch/lk_uch_ql/lk_uch.html
+++ b/src/main/resources/lichnui_kobinetu/lk_uch/lk_uch_ql/lk_uch.html
@@ -42,8 +42,8 @@
             <nav style="--bs-breadcrumb-divider: '';" aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item active" aria-current="page"><p class="ld">Личные данные</p></li>
-                    <li class="breadcrumb-item"><a href="lk2_org.html"><p class="org_sobr">Организация собраний</p></a></li>
-                    <li class="breadcrumb-item"><a href="lk3_org.html"><p class="chern_zaiav">Черновики заявок</p></a></li>
+                    <li class="breadcrumb-item"><a href="lk2_uch.html"><p class="org_sobr">Организация собраний</p></a></li>
+                    <li class="breadcrumb-item"><a href="lk3_uch.html"><p class="chern_zaiav">Черновики заявок</p></a></li>
                 </ol>
             </nav>
 
